--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-                  'Dark-cyan': 'hsl(158, 36%, 37%)',
-                  Cream: 'hsl(30, 38%, 92%)',
-                  'Very-dark-blue': 'hsl(212, 21%, 14%)',
-                  'Dark-grayish-blue': 'hsl(228, 12%, 48%)',
-                  White: 'hsl(0, 0%, 100%)'
+      <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+
+      <script src="https://cdn.tailwindcss.com"></script>
+      <script>
+            tailwind.config = {
+                  theme: {
+                        extend: {
+                              colors: {
+                                    'Dark-cyan': 'hsl(158, 36%, 37%)',
+                                    Cream: 'hsl(30, 38%, 92%)',
+                                    'Very-dark-blue': 'hsl(212, 21%, 14%)',
+                                    'Dark-grayish-blue': 'hsl(228, 12%, 48%)',
+                                    White: 'hsl(0, 0%, 100%)'
+                              }
+                        }
+                  }
             }
-          }
-        }
-      }
-    </script>
-  <title>MrJay's Product preview card component</title>
+      </script>
+      <title>MrJay's Product preview card component</title>
 </head>
 <body class="min-h-screen">
       <div class="container mx-auto">
