Added new fonts to tailwind.config

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             tailwind.config = {
                   theme: {
                         extend: {
+                              fontFamily: {
+                                    'Montserrat': ['Montserrat', 'sans-serif'],
+                                    'Fraunces': ['Fraunces', 'serif']
+                              },
                               colors: {
                                     'Dark-cyan': 'hsl(158, 36%, 37%)',
                                     Cream: 'hsl(30, 38%, 92%)',
@@ -33,7 +37,7 @@
                         <!-- <img src="./images/image-product-desktop.jpg" alt="Perfume Desktop Image" />          -->
                         <img src="./images/image-product-mobile.jpg" alt="Perfume Desktop Image" />              
                         <div>
-                              <div>Perfume</div>
+                              <div class="font-Montserrat">Perfume</div>
                               <h1> Gabrielle Essence Eau De Parfum</h1>
                               <p>
                                     A floral, solar and voluptuous interpretation composed by Olivier Polge, 
