--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <body class="min-h-screen">
       <div class="container mx-auto">
             <div class="flex flex-row justify-center">
-                  <div class="flex lg:flex-row flex-col">
+                  <div class="flex lg:flex-row flex-col shadow-sm">
                         <!-- <img src="./images/image-product-desktop.jpg" alt="Perfume Desktop Image" />          -->
                         <img src="./images/image-product-mobile.jpg" alt="Perfume Desktop Image" />              
-                        <div>
-                              <div class="font-Montserrat">Perfume</div>
+                        <div class="p-5">
+                              <div class="font-Montserrat">PERFUME</div>
                               <h1> Gabrielle Essence Eau De Parfum</h1>
                               <p>
                                     A floral, solar and voluptuous interpretation composed by Olivier Polge, 
@@ -48,7 +48,7 @@
                                           <h2> $149.99</h2>
                                           <h3>$169.99</h3>
                                     </div>
-                                    <button> Add to Cart</button>
+                                    <button class="bg-Dark-cyan"> Add to Cart</button>
                               </div>
                         </div>  
                   </div>          
