Added text-font fraunces

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                   <div class="flex lg:flex-row flex-col shadow-sm">
                         <!-- <img src="./images/image-product-desktop.jpg" alt="Perfume Desktop Image" />          -->
                         <img src="./images/image-product-mobile.jpg" alt="Perfume Desktop Image" />              
-                        <div class="p-5">
+                        <div class="p-6">
                               <div class="font-Montserrat">PERFUME</div>
-                              <h1> Gabrielle Essence Eau De Parfum</h1>
+                              <h1 class="font-Fraunces font-extrabold"> Gabrielle Essence Eau De Parfum</h1>
                               <p>
                                     A floral, solar and voluptuous interpretation composed by Olivier Polge, 
                                     Perfumer-Creator for the House of CHANEL.
