Add paragraph font-size. Add tracking to perfume

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                         <!-- <img src="./images/image-product-desktop.jpg" alt="Perfume Desktop Image" />          -->
                         <img src="./images/image-product-mobile.jpg" alt="Perfume Desktop Image" />              
                         <div class="p-6">
-                              <div class="font-Montserrat">PERFUME</div>
+                              <div class="font-Montserrat text-xs tracking-[0.25rem]">PERFUME</div>
                               <h1 class="font-Fraunces font-extrabold"> Gabrielle Essence Eau De Parfum</h1>
-                              <p>
+                              <p class="text-[14px]">
                                     A floral, solar and voluptuous interpretation composed by Olivier Polge, 
                                     Perfumer-Creator for the House of CHANEL.
                               </p>
