--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                   theme: {
                         extend: {
                               fontFamily: {
-                                    'Montserrat': ['Montserrat', 'sans-serif'],
-                                    'Fraunces': ['Fraunces', 'serif']
+                                    'Montserrat': [ 'Montserrat', 'sans-serif' ],
+                                    'Fraunces': [ 'Fraunces' ]
                               },
                               colors: {
                                     'Dark-cyan': 'hsl(158, 36%, 37%)',
@@ -38,7 +38,7 @@
                         <img src="./images/image-product-mobile.jpg" alt="Perfume Desktop Image" />              
                         <div class="p-6">
                               <div class="font-Montserrat text-xs tracking-[0.25rem]">PERFUME</div>
-                              <h1 class="font-Fraunces font-extrabold"> Gabrielle Essence Eau De Parfum</h1>
+                              <h1 class="font-Fraunces text-3xl font-bold leading-7"> Gabrielle Essence Eau De Parfum</h1>
                               <p class="text-[14px]">
                                     A floral, solar and voluptuous interpretation composed by Olivier Polge, 
                                     Perfumer-Creator for the House of CHANEL.
