Added bg colour. Added text-colour.

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 <body class="min-h-screen">
       <div class="container mx-auto">
             <div class="flex flex-row justify-center">
-                  <div class="flex lg:flex-row flex-col shadow-sm">
+                  <div class="flex lg:flex-row flex-col shadow-sm bg-Cream">
                         <!-- <img src="./images/image-product-desktop.jpg" alt="Perfume Desktop Image" />          -->
                         <img src="./images/image-product-mobile.jpg" alt="Perfume Desktop Image" />              
                         <div class="p-6">
-                              <div class="font-Montserrat text-xs tracking-[0.25rem]">PERFUME</div>
+                              <div class="font-Montserrat text-xs tracking-[0.25rem] text-Dark-grayish-blue">PERFUME</div>
                               <h1 class="font-Fraunces text-3xl font-bold leading-7"> Gabrielle Essence Eau De Parfum</h1>
-                              <p class="text-[14px]">
+                              <p class="text-[14px] text-Dark-grayish-blue">
                                     A floral, solar and voluptuous interpretation composed by Olivier Polge, 
                                     Perfumer-Creator for the House of CHANEL.
                               </p>
@@ -48,7 +48,8 @@
                                           <h2> $149.99</h2>
                                           <h3>$169.99</h3>
                                     </div>
-                                    <button class="bg-Dark-cyan"> Add to Cart</button>
+                                    <button class="bg-Dark-cyan"> 
+                                          Add to Cart</button>
                               </div>
                         </div>  
                   </div>          
