--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
                                           <h2> $149.99</h2>
                                           <h3>$169.99</h3>
                                     </div>
-                                    <button class="bg-Dark-cyan"> 
-                                          Add to Cart</button>
+                                    <button class="p-3 bg-Dark-cyan font-medium font-Montserrat text-sm text-White rounded-md w-full flex flex-row justify-center gap-2"> 
+                                          <img src="./images/icon-cart.svg" alt="Cart Icon" class="self-center"/>
+                                          <div>
+                                                Add to Cart
+                                          </div>
+                                    </button>
                               </div>
                         </div>  
                   </div>          
