Add sytling to price.

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                         <div class="p-6">
                               <div class="font-Montserrat text-xs tracking-[0.25rem] text-Dark-grayish-blue">PERFUME</div>
                               <h1 class="font-Fraunces text-3xl font-bold leading-7"> Gabrielle Essence Eau De Parfum</h1>
-                              <p class="text-[14px] text-Dark-grayish-blue">
+                              <p class="font-Montserrat text-[14px] text-Dark-grayish-blue">
                                     A floral, solar and voluptuous interpretation composed by Olivier Polge, 
                                     Perfumer-Creator for the House of CHANEL.
                               </p>
                               <div>                              
-                                    <div>
-                                          <h2> $149.99</h2>
-                                          <h3>$169.99</h3>
+                                    <div class="flex flex-row">
+                                          <h2 class="font-Fraunces text-3xl font-[700] leading-7"> $149.99</h2>
+                                          <h3 class="self-center font-Montserrat text-[14px] text-Dark-grayish-blue"><s>$169.99</s></h3>
                                     </div>
                                     <button class="p-3 bg-Dark-cyan font-medium font-Montserrat text-sm text-White rounded-md w-full flex flex-row justify-center gap-2"> 
                                           <img src="./images/icon-cart.svg" alt="Cart Icon" class="self-center"/>
