--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
       <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap" rel="stylesheet">
 
       <script src="https://cdn.tailwindcss.com"></script>
       <script>
@@ -14,8 +17,12 @@
                   theme: {
                         extend: {
                               fontFamily: {
-                                    'Montserrat': [ 'Montserrat', 'sans-serif' ],
-                                    'Fraunces': [ 'Fraunces' ]
+                                    'Montserrat': [ 'Montserrat', 'sans-serif '],
+                                    'Fraunces': [ 'Fraunces', 'serif']
+                              },
+                              fontWeight: {
+                                    '500': 500,
+                                    '700': 700,
                               },
                               colors: {
                                     'Dark-cyan': 'hsl(158, 36%, 37%)',
@@ -45,7 +52,7 @@
                               </p>
                               <div>                              
                                     <div class="flex flex-row">
-                                          <h2 class="font-Fraunces text-3xl font-[700] leading-7"> $149.99</h2>
+                                          <h2 class="font-Fraunces text-3xl "> $149.99</h2>
                                           <h3 class="self-center font-Montserrat text-[14px] text-Dark-grayish-blue"><s>$169.99</s></h3>
                                     </div>
                                     <button class="p-3 bg-Dark-cyan font-medium font-Montserrat text-sm text-White rounded-md w-full flex flex-row justify-center gap-2"> 
