--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body class="min-h-screen">
       <div class="container mx-auto">
-            <div class="flex flex-row justify-center">
+            <div class="flex flex-row justify-center max-w-[340px]">
                   <div class="flex lg:flex-row flex-col shadow-sm bg-Cream">
                         <!-- <img src="./images/image-product-desktop.jpg" alt="Perfume Desktop Image" />          -->
                         <img src="./images/image-product-mobile.jpg" alt="Perfume Desktop Image" />              
@@ -51,7 +51,7 @@
                                     Perfumer-Creator for the House of CHANEL.
                               </p>
                               <div>                              
-                                    <div class="flex flex-row">
+                                    <div class="flex flex-row gap-5">
                                           <h2 class="font-Fraunces text-3xl "> $149.99</h2>
                                           <h3 class="self-center font-Montserrat text-[14px] text-Dark-grayish-blue"><s>$169.99</s></h3>
                                     </div>
