--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 </head>
 <body class="min-h-screen">
       <div class="container mx-auto">
-            <div class="flex flex-row justify-center max-w-[340px]">
-                  <div class="flex lg:flex-row flex-col shadow-sm bg-Cream">
+            <div class="flex flex-row justify-center ">
+                  <div class="flex md:flex-row flex-col shadow-sm bg-Cream">
                         <!-- <img src="./images/image-product-desktop.jpg" alt="Perfume Desktop Image" />          -->
                         <img src="./images/image-product-mobile.jpg" alt="Perfume Desktop Image" />              
-                        <div class="p-6">
+                        <div class="p-6 md:max-w-[340px] max-w-full">
                               <div class="font-Montserrat text-xs tracking-[0.25rem] text-Dark-grayish-blue">PERFUME</div>
                               <h1 class="font-Fraunces text-3xl font-bold leading-7"> Gabrielle Essence Eau De Parfum</h1>
                               <p class="font-Montserrat text-[14px] text-Dark-grayish-blue">
