Added flex, flex-col and centered vertically.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </script>
       <title>MrJay's Product preview card component</title>
 </head>
-<body class="min-h-screen">
+<body class="min-h-screen flex flex-col justify-center">
       <div class="container mx-auto">
             <div class="flex flex-row justify-center ">
                   <div class="flex md:flex-row flex-col shadow-sm bg-Cream">
