Added overflow-hidden and rounded radius.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body class="min-h-screen flex flex-col justify-center">
       <div class="container mx-auto">
             <div class="flex flex-row justify-center ">
-                  <div class="flex md:flex-row flex-col shadow-sm bg-Cream">
+                  <div class="flex md:flex-row flex-col shadow-sm bg-Cream rounded-xl overflow-hidden">
                         <!-- <img src="./images/image-product-desktop.jpg" alt="Perfume Desktop Image" />          -->
                         <img src="./images/image-product-mobile.jpg" alt="Perfume Desktop Image" />              
                         <div class="p-6 md:max-w-[340px] max-w-full">
