Added padding for container.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <title>MrJay's Product preview card component</title>
 </head>
 <body class="min-h-screen flex flex-col justify-center">
-      <div class="container mx-auto">
+      <div class="md:px-0 px-4 md:py-0 py-7 container mx-auto">
             <div class="flex flex-row justify-center ">
                   <div class="flex md:flex-row flex-col shadow-sm bg-Cream rounded-xl overflow-hidden">
                         <!-- <img src="./images/image-product-desktop.jpg" alt="Perfume Desktop Image"  class="md:block hidden h-fit" />          -->
