--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
                         <!-- <img src="./images/image-product-desktop.jpg" alt="Perfume Desktop Image"  class="md:block hidden h-fit" />          -->
                         <img src="./images/image-product-mobile.jpg" alt="Perfume Desktop Image" class="md:hidden block"/>              
                         <div class="md:p-8 p-6 md:max-w-[340px] max-w-full">
-                              <div class="font-Montserrat text-xs tracking-[0.25rem] text-Dark-grayish-blue">PERFUME</div>
-                              <h1 class="font-Fraunces text-3xl font-bold leading-7"> Gabrielle Essence Eau De Parfum</h1>
-                              <p class="font-Montserrat text-[14px] text-Dark-grayish-blue">
-                                    A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-                                    Perfumer-Creator for the House of CHANEL.
-                              </p>
+                              <div class="font-Montserrat text-xs tracking-[0.25rem] text-Dark-grayish-blue mb-3">PERFUME</div>
+                              <div class="flex flex-col gap-4 mb-5">                             
+                                    <h1 class="font-Fraunces text-3xl font-bold leading-7"> Gabrielle Essence Eau De Parfum</h1>
+                                    <p class="font-Montserrat text-[14px] text-Dark-grayish-blue">
+                                          A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+                                          Perfumer-Creator for the House of CHANEL.
+                                    </p>
+                              </div>
                               <div class="flex flex-col gap-4">                              
                                     <div class="flex flex-row gap-5">
                                           <h2 class="font-Fraunces text-3xl "> $149.99</h2>
