--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                               </div>
                               <div class="flex flex-col md:gap-6 gap-4">                              
                                     <div class="flex flex-row gap-5">
-                                          <h2 class="font-Fraunces text-3xl "> $149.99</h2>
+                                          <h2 class="font-Fraunces text-3xl text-Dark-cyan"> $149.99</h2>
                                           <h3 class="self-center font-Montserrat text-[14px] text-Dark-grayish-blue"><s>$169.99</s></h3>
                                     </div>
                                     <button class="p-3 bg-Dark-cyan font-medium font-Montserrat text-sm text-White rounded-md w-full flex flex-row justify-center gap-2"> 
