--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <div class="md:px-0 px-4 md:py-0 py-7 container mx-auto">
             <div class="flex flex-row justify-center ">
                   <div class="flex md:flex-row flex-col shadow-sm bg-Cream rounded-xl overflow-hidden">
-                        <!-- <img src="./images/image-product-desktop.jpg" alt="Perfume Desktop Image"  class="md:block hidden h-fit" />          -->
+                        <img src="./images/image-product-desktop.jpg" alt="Perfume Desktop Image"  class="basis-1/2 md:block hidden h-[412px]" />         
                         <img src="./images/image-product-mobile.jpg" alt="Perfume Desktop Image" class="md:hidden block"/>              
-                        <div class="md:p-8 p-6 md:max-w-[340px] max-w-full">
+                        <div class="basis-1/2 md:p-8 p-6 md:max-w-[300px] max-w-full">
                               <div class="font-Montserrat text-xs tracking-[0.25rem] text-Dark-grayish-blue md:mb-4 mb-3">PERFUME</div>
                               <div class="flex flex-col md:gap-5 gap-4 md:mb-6 mb-5">                             
                                     <h1 class="font-Fraunces text-3xl font-bold leading-7"> Gabrielle Essence Eau De Parfum</h1>
