Added footer context from other project.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </script>
       <title>MrJay's Product preview card component</title>
 </head>
-<body class="min-h-screen flex flex-col justify-center">
+<body class="relative min-h-screen flex flex-col justify-center">
       <div class="md:px-0 px-4 md:py-0 py-7 container mx-auto">
             <div class="flex flex-row justify-center ">
                   <div class="flex md:flex-row flex-col shadow-sm bg-Cream rounded-xl overflow-hidden">
@@ -68,5 +68,14 @@
                   </div>          
             </div>
       </div>
+      <footer class='py-10 absolute md:block hidden bottom-0 w-full bg-Cream text-Dark-grayish-blue text-center'>
+            Challenge by
+            <a href="https://www.frontendmentor.io?ref=challenge" 
+                target="_blank" 
+                rel="noreferrer" 
+                class='underline underline-offset-4 '>
+                    Frontend Mentor</a>. 
+                Coded with enthusiasm by <a href="https://github.com/chungvuiloong" class='underline underline-offset-4'>Jere / Chung Vui Loong</a>.
+        </footer>
 </body>
 </html>
