--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                           <h2 class="font-Fraunces text-3xl text-Dark-cyan"> $149.99</h2>
                                           <h3 class="self-center font-Montserrat text-[14px] text-Dark-grayish-blue"><s>$169.99</s></h3>
                                     </div>
-                                    <button class="p-3 bg-Dark-cyan font-medium font-Montserrat text-sm text-White rounded-md w-full flex flex-row justify-center gap-2"> 
+                                    <button class="p-3 bg-Dark-cyan hover:bg-Very-dark-blue font-medium font-Montserrat text-sm text-White rounded-md w-full flex flex-row justify-center gap-2"> 
                                           <img src="./images/icon-cart.svg" alt="Cart Icon" class="self-center"/>
                                           <div>
                                                 Add to Cart
